--- a/lang/en/about/index.html
+++ b/lang/en/about/index.html
@@ -31,8 +31,8 @@
 			<ul class="cf">
 				<li><a href="http://www.chuko-awamori.com/">日本語</a></li>
 				<li><a href="../index.php" class="on">English</a></li>
-				<li><a href="../../zh-tw/_index.php">繁体中文</a></li>
-				<li><a href="../../zh-ch/_index.php">簡体中文</a></li>
+				<li><a href="../../zh-tw/index.php">繁体中文</a></li>
+				<li><a href="../../zh-ch/index.php">簡体中文</a></li>
 			</ul>
 		</div>
 	</div>
