--- a/lang/en/kiln/index_sp.html
+++ b/lang/en/kiln/index_sp.html
@@ -43,9 +43,9 @@
 			<div class="sp-lang-navi">
 				<ul>
 					<li><a href="http://www.chuko-awamori.com/">日本語</a></li>
-					<li><a href="index_sp.html" class="on">English</a></li>
-					<li><a href="../../zh-tw/_index.php">繁体中文</a></li>
-					<li><a href="../../zh-ch/_index.php">簡体中文</a></li>
+					<li><a href="../index.php" class="on">English</a></li>
+					<li><a href="../../zh-tw/index.php">繁体中文</a></li>
+					<li><a href="../../zh-ch/index.php">簡体中文</a></li>
 				</ul>
 			</div>
 		</div>
@@ -109,6 +109,10 @@
 					</div>
 				</div><!-- /.item-box-01 -->
 			</div><!-- /.section-3 -->
+
+			<div class="section-4 section-box">
+				<p><a href="../../images/en/kiln/en-kiln-img-01.jpg"><img src="../../images/en/kiln/en-kiln-img-01.jpg" alt="Chuko Original Kiln Firing" /></a></p>
+			</div><!-- /.section-4 -->
 
 		</div><!-- /.content-inner -->
 
