--- a/lang/zh-ch/about/index.html
+++ b/lang/zh-ch/about/index.html
@@ -31,8 +31,8 @@
 			<ul class="cf">
 				<li><a href="http://www.chuko-awamori.com/">日本語</a></li>
 				<li><a href="../../en/index.php">English</a></li>
-				<li><a href="../index.php" class="on">繁体中文</a></li>
-				<li><a href="../../zh-cn/index.php">簡体中文</a></li>
+				<li><a href="../../zh-tw/index.php">繁体中文</a></li>
+				<li><a href="index.php" class="on">簡体中文</a></li>
 			</ul>
 		</div>
 	</div>
@@ -40,10 +40,10 @@
 	
 	<div id="g_navi">
 		<ul class="cf">
-			<li><a href="../index.html" class="navi_01"><span>什麼是泡盛</span></a></li>
-			<li><a href="../tour/index.html" class="navi_02"><span>酒窖參觀</span></a></li>
-			<li><a href="../kiln/index.html" class="navi_03"><span>忠孝南蠻粗燒</span></a></li>
-			<li><a href="../shitsugi/index.html" class="navi_04"><span>泡盛的傳統 － shitsuigi</span></a></li>
+			<li><a href="../index.html" class="navi_01"><span>什么是泡盛</span></a></li>
+			<li><a href="../tour/index.html" class="navi_02"><span>酒窖参观</span></a></li>
+			<li><a href="../kiln/index.html" class="navi_03"><span>忠孝南蛮粗烧</span></a></li>
+			<li><a href="../shitsugi/index.html" class="navi_04"><span>泡盛的传统－shitsugi</span></a></li>
 			<li><a href="index.html" class="navi_05 on"><span>公司概要</span></a></li>
 		</ul>
 	</div>
@@ -58,54 +58,54 @@
 		</ul>
 
 		<div class="content-inner">
-			<h2><img src="../../images/zh-tw/about/tw-about-h2.png" alt="公司概要" /></h2>
+			<h2><img src="../../images/zh-ch/about/ch-about-h2.png" alt="公司概要" /></h2>
 
 			<div class="section-1 section-box">
-				<h3><img src="../../images/zh-tw/about/tw-about-ttl-01.png" alt="致尊敬的顧客" /></h3>
+				<h3><img src="../../images/zh-ch/about/ch-about-ttl-01.png" alt="致尊敬的顾客们" /></h3>
 				<div class="greeting-box">
 					<div class="greeting-txt-box">
 						<p class="mb-30">
-							本公司的前身為「豐見城酒造工廠」。於昭和24年（1949年） 在沖繩本島那霸市的旁邊的豐見城市創立、第一代董事長為大城忠孝先生。<br />
-							1980年改名為現在的忠孝酒造。<br />
-							本公司本著"傳承和創造泡盛文化"之基本理念、努力探求泡盛釀造新技術的同時、著力於「研究」「傾聽」「創新」「挑戰」、全體員工同心協力、日益進取釀造優質泡盛。<br />
-							1989年前任公司總經理大城繁先生率先開始對適宜泡盛酒熟成的南蠻陶甕展開了研究、創建了泡盛造酒業第一個自家陶窯、開發製成了用來熟成泡盛的容器（忠孝南蠻粗燒酒甕）、為開創現代優秀的泡盛文化作出了貢獻。<br />
+							本公司的前身为「丰见城酒造工厂」。于昭和24年（1949年） 在冲绳本岛那霸市的旁边的丰见城市创立、第一代董事长为大城忠孝先生。<br />
+							1980年改名为现在的忠孝酒造。<br />
+							本公司本着"传承和创造泡盛文化"之基本理念、努力探求泡盛酿造新技术的同时、着力于「研究」「倾听」「创新」「挑战」、全体员工同心协力、日益进取酿造优质泡盛名酒。<br />
+							1989年前任公司总经理大城繁先生率先开始对适合泡盛酒熟成的南蛮陶瓮展开了研究、创建了泡盛造酒业第一个自家陶窑、开发制成了用来熟成泡盛的容器（忠孝南蛮粗烧酒瓮）、为开创现代优秀泡盛文化作出了贡献。<br />
 							<br />
-							我公司的目標是繼承琉毬王國時代古老卓越的沖繩文化之同時、繼往開來發展泡盛文化以創造立足於世界的現代社會新價值觀。至今我們致力向沖繩縣內 傳播對泡盛酒釀造的執著和熱情。今後將繼續向縣內外發送信息、把「琉球泡盛」傳遞到更多人的手中。<br />
-							為貢獻地域社會、讓泡盛文化遍及日本全國和全世界、我們將開始新的挑戰。
+							我公司的目标是继承琉球王国时代古老卓越的冲绳文化之同时、继往开来发展泡盛文化以创造立足于世界的现代社会新价值观。至今我们致力向冲绳县内 传播对泡盛酒酿造的执著和热情。今后将继续向县内外发送信息、把「琉球泡盛」传递到更多人的手中。<br />
+							为贡献地域社会、让泡盛文化遍及日本全国乃至全世界、我们将开始新的挑战。
 						</p>
 						<p class="ta-r">
-							忠孝酒造株式會社<br />
-							總經理　大城 勤
+							忠孝酒造株式会社<br />
+							总经理　大城 勤
 						</p>
 					</div><!-- /.greeting-txt-box -->
 					<div class="greeting-img-box">
-						<p><img src="../../images/common/about-img-01.jpg" alt="總經理　大城 勤" /></p>
+						<p><img src="../../images/common/about-img-01.jpg" alt="总经理　大城 勤" /></p>
 					</div>
 				</div><!-- /.greeting-box -->
 
 				<table class="table-01">
 					<tbody>
 						<tr>
-							<th>創立年</th>
+							<th>创立年</th>
 							<td>1949年</td>
 						</tr>
 						<tr>
-							<th>總公司</th>
+							<th>总公司</th>
 							<td>
-								<img src="../../images/common/about-img-02.jpg" alt="Head Office" class="fl-l mr-20" />
-								<p>郵編901-0235  沖繩縣豐見城市字名嘉地132番地<br />TEL：098-850-1257<br />FAX：098-850-1204</p>
+								<img src="../../images/common/about-img-02.jpg" alt="总公司" class="fl-l mr-20" />
+								<p>邮编901-0235 冲绳县丰见城市字名嘉地132番地<br />TEL：098-850-1257<br />FAX：098-850-1204</p>
 							</td>
 						</tr>
 						<tr>
-							<th>東京營業所</th>
-							<td>郵編108-0075 東京都港區港南3-6-4<br />TEL：03-5460-3327 FAX：03-5460-3397</td>
+							<th>东京营业所</th>
+							<td>邮编108-0075 东京都港区港南3-6-4<br />TEL：03-5460-3327 FAX：03-5460-3397</td>
 						</tr>
 						<tr>
-							<th>資本金</th>
-							<td>4,100萬日元</td>
+							<th>资本金</th>
+							<td>4,100万日元</td>
 						</tr>
 						<tr>
-							<th>員工數</th>
+							<th>员工数</th>
 							<td>48名</td>
 						</tr>
 					</tbody>
@@ -121,11 +121,11 @@
 		<div class="inner_wrap">
 			<p><a href="/"><img src="../../images/common/f_logo.png" alt="忠孝酒造株式会社" /></a></p>
 			<ul>
-				<li><a href="../index.html"><span class="icon-f-right-icon"></span>什麼是泡盛</a></li>
-				<li><a href="../tour/index.html"><span class="icon-f-right-icon"></span>酒窖參觀</a></li>
-				<li><a href="../kiln/index.html"><span class="icon-f-right-icon"></span>忠孝南蠻粗燒</a></li>
-				<li><a href="../shitsugi/index.html"><span class="icon-f-right-icon"></span>泡盛的傳統 － shitsuigi</a></li>
-				<li><a href="index.html"><span class="icon-f-right-icon"></span>公司概要</a></li>
+				<li><a href="../index.php"><span class="icon-f-right-icon"></span>什么是泡盛</a></li>
+				<li><a href="../tour/index.php"><span class="icon-f-right-icon"></span>酒窖参观</a></li>
+				<li><a href="../kiln/index.php"><span class="icon-f-right-icon"></span>忠孝南蛮粗烧</a></li>
+				<li><a href="../shitsugi/index.php"><span class="icon-f-right-icon"></span>泡盛的传统－shitsugi</a></li>
+				<li><a href="index.php"><span class="icon-f-right-icon"></span>公司概要</a></li>
 			</ul>
 			<a id="toTop" href="#"><img src="../../images/common/btn_top.png" alt="TOP" /></a>
 		</div>
