--- a/lang/zh-ch/index.html
+++ b/lang/zh-ch/index.html
@@ -33,7 +33,7 @@
 			<ul class="cf">
 				<li><a href="http://www.chuko-awamori.com/">日本語</a></li>
 				<li><a href="../en/index.php">English</a></li>
-				<li><a href="../zh-twindex.php">繁体中文</a></li>
+				<li><a href="../zh-tw/index.php">繁体中文</a></li>
 				<li><a href="index.php" class="on">簡体中文</a></li>
 			</ul>
 		</div>
@@ -101,11 +101,11 @@
 		<div class="inner_wrap">
 			<p><a href="/"><img src="../images/common/f_logo.png" alt="忠孝酒造株式会社" /></a></p>
 			<ul>
-				<li><a href="index.html"><span class="icon-f-right-icon"></span>什么是泡盛</a></li>
-				<li><a href="tour/index.html"><span class="icon-f-right-icon"></span>酒窖参观</a></li>
-				<li><a href="kiln/index.html"><span class="icon-f-right-icon"></span>忠孝南蛮粗烧</a></li>
-				<li><a href="shitsugi/index.html"><span class="icon-f-righto"></span>泡盛的传统 －shitsuigi</a></li>
-				<li><a href="about/index.html"><span class="icon-f-right-icon"></span>公司概要</a></li>
+				<li><a href="index.php"><span class="icon-f-right-icon"></span>什么是泡盛</a></li>
+				<li><a href="tour/index.php"><span class="icon-f-right-icon"></span>酒窖参观</a></li>
+				<li><a href="kiln/index.php"><span class="icon-f-right-icon"></span>忠孝南蛮粗烧</a></li>
+				<li><a href="shitsugi/index.php"><span class="icon-f-righto"></span>泡盛的传统 －shitsuigi</a></li>
+				<li><a href="about/index.php"><span class="icon-f-right-icon"></span>公司概要</a></li>
 			</ul>
 			<a id="toTop" href="#"><img src="../images/common/btn_top.png" alt="TOP" /></a>
 		</div>
