--- a/lang/zh-ch/kiln/index.html
+++ b/lang/zh-ch/kiln/index.html
@@ -32,8 +32,8 @@
 			<ul class="cf">
 				<li><a href="http://www.chuko-awamori.com/">日本語</a></li>
 				<li><a href="../../en/index.php">English</a></li>
-				<li><a href="../../index.php">繁体中文</a></li>
-				<li><a href="../zh-cn/index.php" class="on">簡体中文</a></li>
+				<li><a href="../../zh-tw/index.php">繁体中文</a></li>
+				<li><a href="index.php" class="on">簡体中文</a></li>
 			</ul>
 		</div>
 	</div>
@@ -59,45 +59,51 @@
 		</ul>
 
 		<div class="content-inner">
-			<h2><img src="../../images/zh-ch/kiln/ch-kiln-h2.png" alt="Chuko Original Kiln Firing" /></h2>
+			<h2><img src="../../images/zh-ch/kiln/ch-kiln-h2.png" alt="忠孝南蛮粗烧" /></h2>
 
 			<div class="section-1 section-box">
 				<p>
-					南蠻粗燒起源於南蠻甕。是15～16世紀琉毬王國展開海外大貿易的時代從東南亞傳來的。<br />
-					其特點是不使用釉料用高溫燒製而成，自古作為泡盛酒的貯藏容器和古酒釀造容器而被使用。
+					南蛮粗烧起源于南蛮瓮。是15～16世纪琉球王国展开海外大贸易的时代从东南亚传来的。<br />
+					其特点是不使用釉料用高温烧制而成、自古作为泡盛酒的贮藏容器和古酒酿造容器而被使用。
 				</p>
 			</div><!-- /.section-1 -->
 
 			<div class="section-2 section-box">
-				<h3><img src="../../images/zh-ch/kiln/ch-kiln-ttl-01.png" alt="忠孝南蛮粗烧的誕生" /></h3>
+				<h3><img src="../../images/zh-ch/kiln/ch-kiln-ttl-01.png" alt="忠孝南蛮粗烧的诞生" /></h3>
 				<div class="item-box-01">
-					<div class="item-img-box"><img src="../../images/common/kiln-img-01.jpg" alt="忠孝南蛮粗烧的誕生" /></div>
+					<div class="item-img-box"><img src="../../images/common/kiln-img-01.jpg" alt="忠孝南蛮粗烧的诞生" /></div>
 					<div class="item-txt-box">
 						<p class="mb-20">
-							粗燒指的是不使用釉藥上色，保持了土陶本色的高溫燒製而成的陶器。自古被認為最適合用作泡盛酒的熟成。粗燒土陶中含有的鐵份等金屬成份融入缸裡發生催化作用而加速泡盛的熟成。<br />
-							本公司著眼於這一特點，本著「精益求精釀造最佳泡盛酒、最佳古酒」的基本理念，在沖繩縣泡盛行業中率先開始了泡盛熟成容器－酒甕的製造。第一代公司董事長大城繁先生親自轉動陶輪研究製陶，從而開創了業內首個自家陶窯製造的「忠孝南蛮粗烧酒甕」。
+							粗烧指的是不使用釉药上色、保持了土陶本色的高温烧制而成的陶器。自古被认为最适合  用作泡盛酒的熟成。粗烧土陶中含有的铁份等金属成份融入缸里发生催化作用而加速泡盛的熟成。<br />
+							本公司着眼于这一特点、本着「精益求精酿造最佳泡盛酒、最佳古酒」的基本理念、在冲绳县泡盛行业中率先开始了泡盛熟成容器－酒瓮的制造。第一代公司董事长大城繁先生亲自转动陶轮研究制陶、从而开创了业内首个自家陶窑制造的「忠孝南蛮粗烧酒瓮」。
 						</p>
 					</div>
 				</div><!-- /.item-box-01 -->
 			</div><!-- /.section-2 -->
 
 			<div class="section-3 section-box">
-				<h3><img src="../../images/zh-ch/kiln/ch-kiln-ttl-02.png" alt="泡盛的生命在於熟成" /></h3>
+				<h3><img src="../../images/zh-ch/kiln/ch-kiln-ttl-02.png" alt="泡盛的生命在于熟成" /></h3>
 				<div class="item-box-01">
-					<div class="item-img-box"><img src="../../images/common/kiln-img-02.jpg" alt="泡盛的生命在於熟成" /></div>
+					<div class="item-img-box"><img src="../../images/common/kiln-img-02.jpg" alt="泡盛的生命在于熟成" /></div>
 					<div class="item-txt-box">
-						<h4>酒甕斷片</h4>
+						<h4>酒瓮断片</h4>
 						<p class="mb-20">
-							使用質地細膩的泥土高溫燒製、因此密度極高。敲打時發出金屬般的聲音。<br />
-							日本的備前燒的收縮率為20%、而忠孝南蛮粗烧酒甕的收縮率約為45%。<br />
+							使用质地细腻的泥土高温烧制、因此密度极高。<br />
+							敲打时发出金属般的声音。
+							日本备前烧陶的收缩率为20%、而忠孝南蛮粗烧酒瓮的收缩率约为45%。<br />
 							<br />
-							因此我們充滿自信地保證絕不漏水是最適合用來熟成的酒甕。<br />
+							因此我们充满自信地保证<br />
+							&#9312;绝不漏水　&#9313;是最适合用来熟成的酒瓮。<br />
 							<br />
-							&#8251;請把斷片拿在手裡確認一下。
+							&#8251;请把断片拿在手里确认一下。
 						</p>
 					</div>
 				</div><!-- /.item-box-01 -->
 			</div><!-- /.section-3 -->
+
+			<div class="section-4 section-box">
+				<p><img src="../../images/zh-ch/kiln/ch-kiln-img-01.jpg" alt="忠孝南蛮粗烧" /></p>
+			</div><!-- /.section-4 -->
 
 		</div><!-- /.content-inner -->
 
@@ -108,11 +114,11 @@
 		<div class="inner_wrap">
 			<p><a href="/"><img src="../../images/common/f_logo.png" alt="忠孝酒造株式会社" /></a></p>
 			<ul>
-				<li><a href="../index.html"><span class="icon-f-right-icon"></span>什么是泡盛</a></li>
-				<li><a href="../tour/index.html"><span class="icon-f-right-icon"></span>酒窖参观</a></li>
-				<li><a href="index.html"><span class="icon-f-right-icon"></span>忠孝南蛮粗烧</a></li>
-				<li><a href="../shitsugi/index.html"><span class="icon-f-right-icon"></span>泡盛的传统－shitsugi</a></li>
-				<li><a href="../about/index.html"><span class="icon-f-right-icon"></span>公司概要</a></li>
+				<li><a href="../index.php"><span class="icon-f-right-icon"></span>什么是泡盛</a></li>
+				<li><a href="../tour/index.php"><span class="icon-f-right-icon"></span>酒窖参观</a></li>
+				<li><a href="index.php"><span class="icon-f-right-icon"></span>忠孝南蛮粗烧</a></li>
+				<li><a href="../shitsugi/index.php"><span class="icon-f-right-icon"></span>泡盛的传统－shitsugi</a></li>
+				<li><a href="../about/index.php"><span class="icon-f-right-icon"></span>公司概要</a></li>
 			</ul>
 			<a id="toTop" href="#"><img src="../../images/common/btn_top.png" alt="TOP" /></a>
 		</div>
