--- a/lang/zh-ch/shitsugi/index.html
+++ b/lang/zh-ch/shitsugi/index.html
@@ -32,8 +32,8 @@
 			<ul class="cf">
 				<li><a href="http://www.chuko-awamori.com/">日本語</a></li>
 				<li><a href="../../en/index.php">English</a></li>
-				<li><a href="../index.php" class="on">繁体中文</a></li>
-				<li><a href="../../zh-cn/index.php">簡体中文</a></li>
+				<li><a href="../../zh-tw/index.php">繁体中文</a></li>
+				<li><a href="index.php" class="on">簡体中文</a></li>
 			</ul>
 		</div>
 	</div>
@@ -41,10 +41,10 @@
 	
 	<div id="g_navi">
 		<ul class="cf">
-			<li><a href="../index.html" class="navi_01"><span>什麼是泡盛</span></a></li>
-			<li><a href="../tour/index.html" class="navi_02"><span>酒窖參觀</span></a></li>
-			<li><a href="../kiln/index.html" class="navi_03"><span>忠孝南蠻粗燒</span></a></li>
-			<li><a href="index.html" class="navi_04 on"><span>泡盛的傳統 － shitsuigi</span></a></li>
+			<li><a href="../index.html" class="navi_01"><span>什么是泡盛</span></a></li>
+			<li><a href="../tour/index.html" class="navi_02"><span>酒窖参观</span></a></li>
+			<li><a href="../kiln/index.html" class="navi_03"><span>忠孝南蛮粗烧</span></a></li>
+			<li><a href="index.html" class="navi_04 on"><span>泡盛的传统－shitsugi</span></a></li>
 			<li><a href="../about/index.html" class="navi_05"><span>公司概要</span></a></li>
 		</ul>
 	</div>
@@ -55,40 +55,40 @@
 
 		<ul class="breadcrumbs">
 			<li><a href="http://www.chuko-awamori.com/">HOME</a><span class="icon-chevron-thin-right icon"></span></li>
-			<li>泡盛的傳統 － shitsuigi</li>
+			<li>泡盛的传统－shitsugi</li>
 		</ul>
 
 		<div class="content-inner">
-			<h2><img src="../../images/zh-tw/shitsugi/tw-shitsugi-h2.png" alt="泡盛的傳統 － shitsuigi" /></h2>
+			<h2><img src="../../images/zh-ch/shitsugi/ch-shitsugi-h2.png" alt="泡盛的传统－shitsugi" /></h2>
 
 			<div class="section-1 section-box">
-				<h3><img src="../../images/zh-tw/shitsugi/tw-shitsugi-ttl-01.png" alt="家酒家寶" /></h3>
+				<h3><img src="../../images/zh-ch/shitsugi/ch-shitsugi-ttl-01.png" alt="家酒家宝" /></h3>
 				<div class="item-box-01">
 					<div class="item-txt-box">
 						<p class="mb-20">
-							泡盛僅放於酒缸中成不了優質的熟成古酒。<br />
-							為了能持續享用泡盛芳醇的酒香和柔和的口感、需要進行shitsugi這個工序。通過shitsugi讓原酒得到刺激活化、使得酒質更加安定。<br />
-							您要不要嘗試製作視泡盛為家寶、傳承百年、兩百年的本酒廠的古酒呢?
+							泡盛仅放于酒缸中成不了优质的陈酿古酒。<br />
+							为了能持续享用泡盛芳醇的酒香和柔和的口感、需要进行shitsugi这个工序。通过shitsugi让原酒得到刺激活化、使得酒质更加安定。<br />
+							您要不要尝试一下把泡盛视为家宝、传承百年、两百年的本酒厂的古酒制作呢?
 						</p>
 					</div>
-					<div class="item-img-box"><img src="../../images/common/shitsugi-img-01.jpg" alt="Kashu Kahou, Homemade liquor is a family treasure" /></div>
+					<div class="item-img-box"><img src="../../images/common/shitsugi-img-01.jpg" alt="家酒家宝" /></div>
 				</div><!-- /.item-box-01 -->
 			</div><!-- /.section-1 -->
 
 			<div class="section-2 section-box">
-				<h3><img src="../../images/zh-tw/shitsugi/tw-shitsugi-ttl-02.png" alt="Shitsugi, the liquor adding method" /></h3>
+				<h3><img src="../../images/zh-ch/shitsugi/ch-shitsugi-ttl-02.png" alt="什么是shitsugi" /></h3>
 				<div class="explanation-01">
 					<p>
-						首先準備三個酒甕。<br />
-						以存放年份最久的1號酒缸為母酒、再按年份順序依次準備2號酒缸和3號酒缸。
-						母酒在每年的紀念日等時日子開封一次、取出飲用少許後、從2號酒缸中舀出一部分泡盛補足到1號酒缸、再從3號酒缸中舀出一部分泡盛補足到2號酒缸。最後把另外準備的補足用一升泡盛補足到3號酒缸。
+						首先准备三个酒瓮。<br />
+						以存放年份最久的1号酒缸酒为母酒、再按年份顺序依次准备2号酒缸和3号酒缸。
+						母酒在每年的纪念日等日子开封一次、取出饮用少许后、从2号酒缸中舀出一部分泡盛补足到1号酒缸、再从3号酒缸中舀出一部分泡盛补足到2号酒缸。最后把另外准备的补足用一升泡盛补足到3号酒缸。
 					</p>
 				</div>
-				<p class="ta-c"><img src="../../images/zh-tw/shitsugi/shitsugi-img-03.jpg" alt="" /></p>
+				<p class="ta-c"><img src="../../images/zh-ch/shitsugi/shitsugi-img-03.jpg" alt="shitsugi是冲绳古酒制造的传统手法" /></p>
 				<div class="explanation-02">
 					<p>
-						沖繩的先祖們就是運用了這一獨特的手法來精心培育泡盛古酒、這樣就可以隨時飲用到美味的泡盛佳酒了。<br />
-						無法自備多個古酒缸時、我們為您準備了一立升43度的補足用古酒、敬請放心。
+						冲绳的先祖们就是运用了这一独特的手法来精心培育泡盛古酒、这样就可以随时饮用到美味的泡盛佳酒了。<br />
+						无法自备多个古酒缸时、我们可以为您准备一立升43度的补足用古酒、敬请放心。
 					</p>
 				</div>
 			</div><!-- /.section-2 -->
@@ -102,11 +102,11 @@
 		<div class="inner_wrap">
 			<p><a href="/"><img src="../../images/common/f_logo.png" alt="忠孝酒造株式会社" /></a></p>
 			<ul>
-				<li><a href="../index.html"><span class="icon-f-right-icon"></span>什麼是泡盛</a></li>
-				<li><a href="../tour/index.html"><span class="icon-f-right-icon"></span>酒窖參觀</a></li>
-				<li><a href="../kiln/index.html"><span class="icon-f-right-icon"></span>忠孝南蠻粗燒</a></li>
-				<li><a href="index.html"><span class="icon-f-right-icon"></span>泡盛的傳統 － shitsuigi</a></li>
-				<li><a href="../about/index.html"><span class="icon-f-right-icon"></span>公司概要</a></li>
+				<li><a href="../index.php"><span class="icon-f-right-icon"></span>什么是泡盛</a></li>
+				<li><a href="../tour/index.php"><span class="icon-f-right-icon"></span>酒窖参观</a></li>
+				<li><a href="../kiln/index.php"><span class="icon-f-right-icon"></span>忠孝南蛮粗烧</a></li>
+				<li><a href="index.php"><span class="icon-f-right-icon"></span>泡盛的传统－shitsugi</a></li>
+				<li><a href="../about/index.php"><span class="icon-f-right-icon"></span>公司概要</a></li>
 			</ul>
 			<a id="toTop" href="#"><img src="../../images/common/btn_top.png" alt="TOP" /></a>
 		</div>
