--- a/lang/zh-ch/shitsugi/index_sp.html
+++ b/lang/zh-ch/shitsugi/index_sp.html
@@ -32,20 +32,20 @@
 			</div>
 			<div id="g_navi">
 				<ul class="cf">
-					<li class="navi_01"><a href="../index.php">Awamori</a></li>
-					<li class="navi_02"><a href="../tour/index.php">Awamori distillery tour</a></li>
-					<li class="navi_03"><a href="../kiln/index.php">Chuko Original Kiln Firing</a></li>
-					<li class="navi_04"><a href="index.php" class="on">Shitsugi, the tradition of Awamori</a></li>
-					<li class="navi_05"><a href="../about/index.php">About Chuko Distillery</a></li>
+					<li class="navi_01"><a href="../index.php">什么是泡盛</a></li>
+					<li class="navi_02"><a href="../tour/index.php">酒窖参观</a></li>
+					<li class="navi_03"><a href="../kiln/index.php">忠孝南蛮粗烧</a></li>
+					<li class="navi_04"><a href="index.php" class="on">泡盛的传统－shitsugi</a></li>
+					<li class="navi_05"><a href="../about/index.php">公司概要</a></li>
 					<li><span class="btnClose">&times;&#160;close</span></li>
 				</ul>
 			</div>
 			<div class="sp-lang-navi">
-				<ul>
+				<ul class="cf">
 					<li><a href="http://www.chuko-awamori.com/">日本語</a></li>
-					<li><a href="index_sp.html" class="on">English</a></li>
-					<li><a href="../../zh-tw/tw-index.html">繁体中文</a></li>
-					<li><a href="../../zh-cn/cn-index.html">簡体中文</a></li>
+					<li><a href="../../en/index.php">English</a></li>
+					<li><a href="../../zh-tw/index.php">繁体中文</a></li>
+					<li><a href="index.php" class="on">簡体中文</a></li>
 				</ul>
 			</div>
 		</div>
@@ -57,44 +57,42 @@
 
 		<ul class="breadcrumbs">
 			<li><a href="http://www.chuko-awamori.com/">HOME</a><span class="icon-chevron-thin-right icon"></span></li>
-			<li>Shitsugi, the tradition of Awamori</li>
+			<li>泡盛的传统－shitsugi</li>
 		</ul>
 
 		<div class="content-inner">
 
-			<h2>Shitsugi, the tradition of Awamori</h2>
+			<h2>泡盛的传统－shitsugi</h2>
 
 			<div class="section-1 section-box">
-				<h3>Kashu Kahou, Homemade liquor is a family treasure</h3>
+				<h3>家酒家宝</h3>
 				<div class="item-box-01 block-box">
-					<div class="item-img-box mb-20"><img src="../../images/common/shitsugi-img-01.jpg" alt="Kashu Kahou, Homemade liquor is a family treasure" /></div>
+					<div class="item-img-box mb-20"><img src="../../images/common/shitsugi-img-01.jpg" alt="家酒家宝" /></div>
 					<div class="item-txt-box">
 						<p>
-							You cannot mature a good Kusu just by leaving Awamori in a pot.<br />
-							To be able to enjoy its rich aroma and taste, you have to take a method called Shitsugi. <br />
-							Shitsugi stimulates and activates the liquor resting in a pot  and gives it a steady quality. Why not make your own family liquor and treasure it  for 50 or 100 years and pass it down to your descendants?  
+							泡盛仅放于酒缸中成不了优质的陈酿古酒。<br />
+							为了能持续享用泡盛芳醇的酒香和柔和的口感、需要进行shitsugi这个工序。通过shitsugi让原酒得到刺激活化、使得酒质更加安定。<br />
+							您要不要尝试一下把泡盛视为家宝、传承百年、两百年的本酒厂的古酒制作呢?
 						</p>
 					</div>
 				</div><!-- /.item-box-01 -->
 			</div><!-- /.section-1 -->
 
 			<div class="section-2 section-box">
-				<h3>Shitsugi, the liquor adding method</h3>
+				<h3>什么是shitsugi</h3>
 				<div class="block-box">
 					<div class="explanation-01 mb-30">
 						<p>
-							Shitsugi is a Okinawan traditional and fantasitic method of Kusu production.<br />
-							First, three clay pots are arranged.The oldest Kusu is considered as a parent Kusu. <br />
-							Next, the 2nd  and 3rd oldest Kusu are arranged. The parent Kusu pot is to be opened at least once a year for some kind of anniversary or celebration, when you can enjoy its aroma and taste.<br />
-							After that event, the parent Kusu pot is filled again with the 2nd oldest kusu. Then the 2nd oldest is filled with the 3rd one.<br />
-							Lastly, The liquor in a bottle of Kusu, which is suitable for Shitsugi method, is added to fill the 3rd pot. 
+							首先准备三个酒瓮。<br />
+							以存放年份最久的1号酒缸酒为母酒、再按年份顺序依次准备2号酒缸和3号酒缸。
+							母酒在每年的纪念日等日子开封一次、取出饮用少许后、从2号酒缸中舀出一部分泡盛补足到1号酒缸、再从3号酒缸中舀出一部分泡盛补足到2号酒缸。最后把另外准备的补足用一升泡盛补足到3号酒缸。
 						</p>
 					</div>
-					<p class="ta-c mb-30"><img src="../../images/en/shitsugi/shitsugi-img-03.jpg" alt="" /></p>
+					<p class="ta-c mb-30"><img src="../../images/zh-ch/shitsugi/shitsugi-img-03.jpg" alt="什么是shitsugi" /></p>
 					<div class="explanation-02">
 						<p>
-							Our ancestors of Okinawa invented this method with a feeling of hope to enjoy this taste forever. They are said to have enjoyed this Kusu-adding method year by year.<br />
-							For those who are not able to arrange several Kusu pots home, we have prepared a convenient bottle substitute (43% alcohol) for your handy Shitsugi practice.
+							冲绳的先祖们就是运用了这一独特的手法来精心培育泡盛古酒、这样就可以随时饮用到美味的泡盛佳酒了。<br />
+							无法自备多个古酒缸时、我们可以为您准备一立升43度的补足用古酒、敬请放心。
 						</p>
 					</div>
 				</div>
@@ -111,11 +109,11 @@
 		</div>
 		<div class="footer-inner">
 			<ul>
-				<li><a href="../index.php"><span class="icon-f-right-icon"></span>Awamori</a></li>
-				<li><a href="../tour/index.php"><span class="icon-f-right-icon"></span>Awamori distillery tour</a></li>
-				<li><a href="../kiln/index.php"><span class="icon-f-right-icon"></span>Chuko Original Kiln Firing</a></li>
-				<li><a href="index.php"><span class="icon-f-right-icon"></span>Shitsugi, the tradition of Awamori</a></li>
-				<li><a href="../about/index.php"><span class="icon-f-right-icon"></span>About Chuko Distillery</a></li>
+				<li><a href="../index.php"><span class="icon-f-right-icon"></span>什么是泡盛</a></li>
+				<li><a href="../tour/index.php"><span class="icon-f-right-icon"></span>酒窖参观</a></li>
+				<li><a href="../kiln/index.php"><span class="icon-f-right-icon"></span>忠孝南蛮粗烧</a></li>
+				<li><a href="index.php"><span class="icon-f-right-icon"></span>泡盛的传统－shitsugi</a></li>
+				<li><a href="../about/index.php"><span class="icon-f-right-icon"></span>公司概要</a></li>
 			</ul>
 		</div>
 		<p class="copy">Copyright&copy;Chuko Awamori Distillery Co.,LTD.All&#160;rights&#160;reserved.</p>
