--- a/lang/zh-ch/tour/index.html
+++ b/lang/zh-ch/tour/index.html
@@ -31,8 +31,8 @@
 			<ul class="cf">
 				<li><a href="http://www.chuko-awamori.com/">日本語</a></li>
 				<li><a href="../../en/index.php">English</a></li>
-				<li><a href="../../index.php">繁体中文</a></li>
-				<li><a href="../zh-cn/index.php" class="on">簡体中文</a></li>
+				<li><a href="../../zh-tw/index.php">繁体中文</a></li>
+				<li><a href="index.php" class="on">簡体中文</a></li>
 			</ul>
 		</div>
 	</div>
@@ -139,12 +139,12 @@
 								<tr>
 									<th>参观时间</th>
 									<td>
-										9:00～17:00  (每隔30分钟入场）
-										参观最后受理时间 17:00 
-										（试饮及商店到18:00）
+										AM 9:00～PM 5:00  (每隔30分钟入场）
+										参观最后受理时间 PM 5:00 
+										（试饮及商店到PM 6:00）
 										<ul class="annotation mt-30">
 										 	<li>&#8251;如果需要调整时间、请随时与我们商量。</li>
-										 	<li>&#8251;【忠孝酒窖营业时间】 9:00～18:00 全年开放</li>
+										 	<li>&#8251;【忠孝酒窖营业时间】 AM 9:00～PM 6:00 全年开放</li>
 										 </ul> 
 									</td>
 								</tr>
@@ -187,11 +187,11 @@
 		<div class="inner_wrap">
 			<p><a href="/"><img src="../../images/common/f_logo.png" alt="忠孝酒造株式会社" /></a></p>
 			<ul>
-				<li><a href="../index.html"><span class="icon-f-right-icon"></span>什么是泡盛</a></li>
-				<li><a href="index.html"><span class="icon-f-right-icon"></span>酒窖参观</a></li>
-				<li><a href="../kiln/index.html"><span class="icon-f-right-icon"></span>忠孝南蛮粗烧</a></li>
-				<li><a href="../shitsugi/index.html"><span class="icon-f-right-icon"></span>泡盛的传统－shitsugi</a></li>
-				<li><a href="../about/index.html"><span class="icon-f-right-icon"></span>公司概要</a></li>
+				<li><a href="../index.php"><span class="icon-f-right-icon"></span>什么是泡盛</a></li>
+				<li><a href="index.php"><span class="icon-f-right-icon"></span>酒窖参观</a></li>
+				<li><a href="../kiln/index.php"><span class="icon-f-right-icon"></span>忠孝南蛮粗烧</a></li>
+				<li><a href="../shitsugi/index.php"><span class="icon-f-right-icon"></span>泡盛的传统－shitsugi</a></li>
+				<li><a href="../about/index.php"><span class="icon-f-right-icon"></span>公司概要</a></li>
 			</ul>
 			<a id="toTop" href="#"><img src="../../images/common/btn_top.png" alt="TOP" /></a>
 		</div>
