--- a/lang/zh-ch/tour/index_sp.html
+++ b/lang/zh-ch/tour/index_sp.html
@@ -32,20 +32,20 @@
 			</div>
 			<div id="g_navi">
 				<ul class="cf">
-					<li class="navi_01"><a href="../index.php">Awamori</a></li>
-					<li class="navi_02"><a href="index.php" class="on">Awamori distillery tour</a></li>
-					<li class="navi_03"><a href="../kiln/index.php">Chuko Original Kiln Firing</a></li>
-					<li class="navi_04"><a href="../shitsugi/index.php">Shitsugi, the tradition of Awamori</a></li>
-					<li class="navi_05"><a href="../about/index.php">About Chuko Distillery</a></li>
+					<li class="navi_01"><a href="../index.php">什么是泡盛</a></li>
+					<li class="navi_02"><a href="index.php" class="on">酒窖参观</a></li>
+					<li class="navi_03"><a href="../kiln/index.php">忠孝南蛮粗烧</a></li>
+					<li class="navi_04"><a href="../shitsugi/index.php">泡盛的传统－shitsugi</a></li>
+					<li class="navi_05"><a href="../about/index.php">公司概要</a></li>
 					<li><span class="btnClose">&times;&#160;close</span></li>
 				</ul>
 			</div>
 			<div class="sp-lang-navi">
-				<ul>
+				<ul class="cf">
 					<li><a href="http://www.chuko-awamori.com/">日本語</a></li>
-					<li><a href="index_sp.html" class="on">English</a></li>
-					<li><a href="../../zh-tw/tw-index.html">繁体中文</a></li>
-					<li><a href="../../zh-cn/cn-index.html">簡体中文</a></li>
+					<li><a href="../../en/index.php">English</a></li>
+					<li><a href="../../zh-tw/index.php">繁体中文</a></li>
+					<li><a href="index.php" class="on">簡体中文</a></li>
 				</ul>
 			</div>
 		</div>
@@ -57,21 +57,22 @@
 
 		<ul class="breadcrumbs">
 			<li><a href="http://www.chuko-awamori.com/">HOME</a><span class="icon-chevron-thin-right icon"></span></li>
-			<li>Awamori distillery tour</li>
+			<li>酒窖参观</li>
 		</ul>
 
 		<div class="content-inner">
 
-			<h2>Awamori distillery tour</h2>
+			<h2>酒窖参观</h2>
 
 			<div class="section-1 section-box">
 				<div class="block-box">
-					<p class="mb-20">Just enter the map code, and it will lead you to your destination without any trouble.</p>
+					<p class="mb-20">输入地图编码就可以顺利抵达这里。</p>
 					<p class="mb-20 ta-c"><img src="../../images/common/img_mapcode.jpg" alt="mapcode" /></p>
 					<div class="item-box-02">
-						<h4>Tourists from overseas</h4>
+						<h4>致海外的游客们</h4>
 						<p>
-							We apologize to you for inconvenience that we have tours and annoucements only in Japanese language.　However, English guiding is available if you make a reservation in advance. Please mail us for the detailed info. <br />
+							工厂内参观介绍一般全部使用日语，敬请谅解。<br />
+							根据情况我们可以为您安排英语介绍，请事先利用电子邮件联络我们。<br />
 							<span class="icon-f-right-icon mr-5"></span><a href="mailto:&#107;&#101;n&#103;&#97;k&#117;&#64;&#99;hu&#107;&#111;&#46;o&#114;g">&#107;&#101;n&#103;&#97;k&#117;&#64;&#99;hu&#107;&#111;&#46;o&#114;g</a>
 						</p>
 					</div>
@@ -79,60 +80,55 @@
 			</div>
 
 			<div class="section-2 section-box">
-				<h3>Tour Reservation</h3>
+				<h3>参观酒窖的报名方法</h3>
 				<div class="block-box">
 					<p class="mb-30">
-						Available from one person. Please make a reservation in advance for an organized tour. <br />
-						Please make a reservation for: over a party of 10 people, wheel chairs, or any physical assistance.
+						1位起即可参观。若事前预约可以更有效的利用时间。 <br />
+						10人以上的团队、有轮椅者或其他需要护理者时，请一定事先预约。
 					</p>
-					<p class="annotation mb-30">&#8251;Call us for a reservation of the on-the-day tour.</p>
-					<p class="mb-20">Click on the button below for a reservation.</p>
+					<p class="annotation mb-30">&#8251;当天预约请电话确认。</p>
+					<p class="mb-20">需要预约者请按下键确认。</p>
 					<p class="ta-c"><a href=""><img src="../../images/en/tour/en-tour-btn-01.jpg" alt="一般のお客様はこちら" /></a></p>
 				</div>
 			</div><!-- /.section-2 -->
 
 			<div class="section-3 section-box">
-				<h3>Sightseeing Points</h3>
+				<h3>参观看点</h3>
 				<div class="block-box">
 					<div class="item-box-01">
-						<div class="item-img-box"><img src="../../images/common/tour-img-01.jpg" alt="Manually operated Awamori Distillery" /></div>
+						<div class="item-img-box"><img src="../../images/common/tour-img-01.jpg" alt="手工酿造工厂" /></div>
 						<div class="item-txt-box">
-							<h4>Manually operated Awamori Distillery</h4>
+							<h4>手工酿造工厂</h4>
 							<p class="mb-20">
-								We have restaged the old traditional method of  Awamori Here!<br />
-								Only 60 bottles are produced at a time by this way.<br />
-								Unlike a large-scaled modern factory,experienced and skilled craftsmen are needed  all through the process.<br />
-								We have devoted our time and efforts to produce this traditional Awamori.
+								在手工酿造泡盛工厂重现了往昔传统的泡盛制作!<br />
+								一次酿造仅能制出60瓶泡盛酒。<br />
+								不同于大型机械化工厂、每道工序都由技术高超、经验丰富的酿酒师手工操作， 精心制作而成。
 							</p>
 							<ol>
-								<li>&#9312;Steaming of rice by traditional large pot-shaped strainer</li>
-								<li>&#9313;Aging of fermented broth in our original kiln-fired pots</li>
-								<li>&#9314;Distilling  Awamori by a traditional large pot (seen only here on this island)</li>
+								<li>&#9312;用传统蒸锅蒸煮大米</li>
+								<li>&#9313;使用自家制作的忠孝酒醪缸进行酿造</li>
+								<li>&#9314;釜式蒸馏(冲绳本岛只有这里才可见到)</li>
 							</ol>
 						</div>
 					</div><!-- /.item-box-01 -->
 					<div class="item-box-01">
-						<div class="item-img-box"><img src="../../images/common/tour-img-02.jpg" alt="Chuko Kiln" /></div>
+						<div class="item-img-box"><img src="../../images/common/tour-img-02.jpg" alt="忠孝陶窑" /></div>
 						<div class="item-txt-box">
-							<h4>Chuko Kiln</h4>
+							<h4>忠孝陶窑</h4>
 							<p>
-								The firing process in Chuko original kiln can be observed here.<br />
-								Shigeru Oshiro, the Founder and Chairman, first started producing Ku-su clay pots in the Awamori industry. The pots of highest quality don't need any glazing to be dense and firm.<br />
-								They can be created tight through the firing in a kiln.<br />
-								All the pots and clay vessels seen here at Chuko Distillery are the production of kiln firing only, without glaze.<br /> 
-								Every item is handmade, and the rising fire pattern on each pot is one of a kind.<br />
-								Each pot is "only one in the world." Also we, Chuko Distillers, have advocated and supported the idea of "Kashu Kaho,"  homemade liquor is a family treasure.<br />
-								This idea dates back to the time of Ryuku Kingdom. The liquor of 50 or a century old is passed down from one generation to another. 
+								可以参观忠孝南蛮粗烧酒瓮的制作过程。由现任董事长大城繁先生创建的泡盛业首个古酒酒瓮陶窑。<br />
+								最好的古酒酒瓮是高温烧制，不使用任何釉料。在忠孝陶窑用高温制作的古酒酒瓮、酒器全部为手工制作，而且每一个作品的纹样都因窑火各有不同。<br />
+								忠孝酒造还倡导自琉球王朝时代世代传承下来的五十年古酒、百年古酒--「家酒家宝」的酿制。<br />
 							</p>
 						</div>
 					</div><!-- /.item-box-01 -->
 					<div class="item-box-01">
-						<div class="item-img-box"><img src="../../images/common/tour-img-03.jpg" alt="Wooden Cellar for Ku-su" /></div>
+						<div class="item-img-box"><img src="../../images/common/tour-img-03.jpg" alt="木造古酒窖" /></div>
 						<div class="item-txt-box">
-							<h4>Wooden Cellar for Ku-su</h4>
+							<h4>木造古酒窖</h4>
 							<p>
-								This wooden architecture with a solemn atmosphere are filled with Ku-su and fine wood aromas, and a sound of classical music. This is the biggest wooden building next to the largest wooden structure, the Shuri Castle in Okinawa.<br />
-								It holds 18 tanks of liquor equivalent to 25,000 bottles of Awamori, 450,000 bottles of Kusu, and 800 liquor pots. We are proud of this facility and at the sametime, this is a sacred place. We have received numerous thank-you letters from tourists saying, "Subtle scent of Kusu and wood, and the classical music being played all the time highlighted our journey to Okinawa."
+								庄严的空间里飘散着古酒(kusu的酒香和古典音乐，忠孝的木造古酒窖规模是仅次于首里城的木造建筑。<br />
+								是一个从外观难以想像到的空间。里面贮藏着容量为25000立升的8个巨型酒桶、合计45万瓶的古酒和800个酒瓮。这里既是忠孝酒造引以自豪的设施，也是一个神圣的场所。前来参观的来访者常常来信来电称道「淡淡的酒香和木造建筑的清香加上美妙的古典音乐，留下了一幕难忘的旅途记忆」
 							</p>
 						</div>
 					</div><!-- /.item-box-01 -->
@@ -140,40 +136,40 @@
 			</div><!-- /.section-3 -->
 
 			<div class="section-4 section-box">
-				<h3>Tour Information</h3>
+				<h3>酒窖参观指南</h3>
 				<div class="block-box">
 					<dl class="table-02">
-						<dt>Fee</dt>
-						<dd>Free of Charage</dd>
-						<dt>Hours</dt>
+						<dt>免费参观</dt>
+						<dd>免费参观</dd>
+						<dt>参观时间</dt>
 						<dd>
-							AM 9:00～PM 5:00（starts every 30 minutes）
-							Last reservation time PM 5:00
-							(liquor tasting and shopping are available until PM 6:00）
+							AM 9:00～PM 5:00  (每隔30分钟入场）
+							参观最后受理时间 PM 5:00
+							（试饮及商店到PM 6:00）
 							<ul class="annotation mt-30">
-								<li>&#8251;Please contact us for details.</li>
-								<li>&#8251;【Business Hours】 AM 9:00～PM 6:00 everyday</li>
+								<li>&#8251;如果需要调整时间、请随时与我们商量。</li>
+								<li>&#8251;【忠孝酒窖营业时间】 AM 9:00～PM 6:00 全年开放</li>
 							</ul> 
 						</dd>
-						<dt>Tour Time</dt>
-						<dd>Approx. 1 hour</dd>
-						<dt>Tour Contents</dt>
+						<dt>参观约需</dt>
+						<dd>1个小时</dd>
+						<dt>内容</dt>
 						<dd>
 							<ol>
-								<li>&#9312;Introduction DVD movie<br />（about the history of us and Awamori)</li>
-								<li>&#9313;Manually operated Awamori Distillery<br />（Traditional method of distilling Awamori）</li>
-								<li>&#9314;Pottery Factory<br />（Chuko Original Kiln and the Process of Chuko Original Kiln Firing)</li>
-								<li>&#9315;Wooden Cellar for Kusu<br />（The biggest wooden building next to Shuri Castle)</li>
-								<li>&#9316;Basement Cellar<br />（We keep your bottles in a perfect condition for 5 years up to 20 years max.)</li>
-								<li>&#9317;Free Liquor Tasting &amp; Shopping<br />（Many kinds of Awamori for free tasting and Shopping Time）</li>
+								<li>&#9312;录像介绍<br />（本公司的历史和有关泡盛酒的介绍DVD)</li>
+								<li>&#9313;手工酿制泡盛工厂<br />（在再现了昔日酿酒法的工厂里为您解说泡盛的制作工序)</li>
+								<li>&#9314;陶器工厂(忠孝陶窖)<br />
+								(介绍本公司陶窑制作的忠孝南蛮粗烧工序)</li>
+								<li>&#9315;木造古酒窖 <br />（参观仅次于首里城高度的木造建筑)</li>
+								<li>&#9316;地下贮藏库<br />（可以免费试饮各种品牌的泡盛酒)</li>
 							</ol>
 						</dd>
 					</dl>
 				</div><!-- /.block-box -->
-				<ul class="annotation block-box">
-					<li>&#8251;10 minutes from the airport, a mini bottle giveaway per one group (no coupon available)</li>
+				<ul class="annotation">
+					<li>&#8251;团队参观人数多时,请跟我们商量</li>
 					<li>&#8251;Please call our staff near you for assistance.</li>
-					<li>&#8251;Quick tour is also available to suit your schedule. Please contact us for more info.</li>
+					<li>&#8251;希望缩短参观时间时、请通知我们。</li>
 					<li>&#8251;Tour reservation for today is closed. (Pottery Factory and Wooden Cellar) Only Chuko Distillery Facility is open until PM 6:00 (DVD Movie・Manually Operated Distillery・Basement Cellar・Free Tasting)<br />Please contact our staff assistance.</li>
 				</ul>
 			</div><!-- /.section-4 -->
@@ -189,11 +185,11 @@
 		</div>
 		<div class="footer-inner">
 			<ul>
-				<li><a href="../index.php"><span class="icon-f-right-icon"></span>Awamori</a></li>
-				<li><a href="index.php"><span class="icon-f-right-icon"></span>Awamori distillery tour</a></li>
-				<li><a href="../kiln/index.php"><span class="icon-f-right-icon"></span>Chuko Original Kiln Firing</a></li>
-				<li><a href="../shitsugi/index.php"><span class="icon-f-right-icon"></span>Shitsugi, the tradition of Awamori</a></li>
-				<li><a href="../about/index.php"><span class="icon-f-right-icon"></span>About Chuko Distillery</a></li>
+				<li><a href="../index.php"><span class="icon-f-right-icon"></span>什么是泡盛</a></li>
+				<li><a href="index.php"><span class="icon-f-right-icon"></span>酒窖参观</a></li>
+				<li><a href="../kiln/index.php"><span class="icon-f-right-icon"></span>忠孝南蛮粗烧</a></li>
+				<li><a href="../shitsugi/index.php"><span class="icon-f-right-icon"></span>泡盛的传统 －shitsuigi</a></li>
+				<li><a href="../about/index.php"><span class="icon-f-right-icon"></span>公司概要</a></li>
 			</ul>
 		</div>
 		<p class="copy">Copyright&copy;Chuko Awamori Distillery Co.,LTD.All&#160;rights&#160;reserved.</p>
