--- a/lang/zh-tw/kiln/index.html
+++ b/lang/zh-tw/kiln/index.html
@@ -33,7 +33,7 @@
 				<li><a href="http://www.chuko-awamori.com/">日本語</a></li>
 				<li><a href="../../en/index.php">English</a></li>
 				<li><a href="../index.php" class="on">繁体中文</a></li>
-				<li><a href="../../zh-cn/index.php">簡体中文</a></li>
+				<li><a href="../../zh-ch/index.php">簡体中文</a></li>
 			</ul>
 		</div>
 	</div>
@@ -44,7 +44,7 @@
 			<li><a href="../index.html" class="navi_01"><span>什麼是泡盛</span></a></li>
 			<li><a href="../tour/index.html" class="navi_02"><span>酒窖參觀</span></a></li>
 			<li><a href="index.html" class="navi_03 on"><span>忠孝南蠻粗燒</span></a></li>
-			<li><a href="../shitsugi/index.html" class="navi_04"><span>泡盛的傳統 － shitsuigi</span></a></li>
+			<li><a href="../shitsugi/index.html" class="navi_04"><span>泡盛的傳統－shitsuigi</span></a></li>
 			<li><a href="../about/index.html" class="navi_05"><span>公司概要</span></a></li>
 		</ul>
 	</div>
@@ -59,7 +59,7 @@
 		</ul>
 
 		<div class="content-inner">
-			<h2><img src="../../images/zh-tw/kiln/tw-kiln-h2.png" alt="Chuko Original Kiln Firing" /></h2>
+			<h2><img src="../../images/zh-tw/kiln/tw-kiln-h2.png" alt="忠孝南蠻粗燒" /></h2>
 
 			<div class="section-1 section-box">
 				<p>
@@ -98,6 +98,10 @@
 					</div>
 				</div><!-- /.item-box-01 -->
 			</div><!-- /.section-3 -->
+
+			<div class="section-4 section-box">
+				<p><img src="../../images/zh-tw/kiln/tw-kiln-img-01.jpg" alt="忠孝南蠻粗燒" /></p>
+			</div><!-- /.section-4 -->
 
 		</div><!-- /.content-inner -->
 
