--- a/lang/zh-tw/shitsugi/index.html
+++ b/lang/zh-tw/shitsugi/index.html
@@ -33,7 +33,7 @@
 				<li><a href="http://www.chuko-awamori.com/">日本語</a></li>
 				<li><a href="../../en/index.php">English</a></li>
 				<li><a href="../index.php" class="on">繁体中文</a></li>
-				<li><a href="../../zh-cn/index.php">簡体中文</a></li>
+				<li><a href="../../zh-ch/index.php">簡体中文</a></li>
 			</ul>
 		</div>
 	</div>
@@ -44,7 +44,7 @@
 			<li><a href="../index.html" class="navi_01"><span>什麼是泡盛</span></a></li>
 			<li><a href="../tour/index.html" class="navi_02"><span>酒窖參觀</span></a></li>
 			<li><a href="../kiln/index.html" class="navi_03"><span>忠孝南蠻粗燒</span></a></li>
-			<li><a href="index.html" class="navi_04 on"><span>泡盛的傳統 － shitsuigi</span></a></li>
+			<li><a href="index.html" class="navi_04 on"><span>泡盛的傳統－shitsuigi</span></a></li>
 			<li><a href="../about/index.html" class="navi_05"><span>公司概要</span></a></li>
 		</ul>
 	</div>
@@ -55,11 +55,11 @@
 
 		<ul class="breadcrumbs">
 			<li><a href="http://www.chuko-awamori.com/">HOME</a><span class="icon-chevron-thin-right icon"></span></li>
-			<li>泡盛的傳統 － shitsuigi</li>
+			<li>泡盛的傳統－shitsuigi</li>
 		</ul>
 
 		<div class="content-inner">
-			<h2><img src="../../images/zh-tw/shitsugi/tw-shitsugi-h2.png" alt="泡盛的傳統 － shitsuigi" /></h2>
+			<h2><img src="../../images/zh-tw/shitsugi/tw-shitsugi-h2.png" alt="泡盛的傳統－shitsuigi" /></h2>
 
 			<div class="section-1 section-box">
 				<h3><img src="../../images/zh-tw/shitsugi/tw-shitsugi-ttl-01.png" alt="家酒家寶" /></h3>
@@ -71,12 +71,12 @@
 							您要不要嘗試製作視泡盛為家寶、傳承百年、兩百年的本酒廠的古酒呢?
 						</p>
 					</div>
-					<div class="item-img-box"><img src="../../images/common/shitsugi-img-01.jpg" alt="Kashu Kahou, Homemade liquor is a family treasure" /></div>
+					<div class="item-img-box"><img src="../../images/common/shitsugi-img-01.jpg" alt="家酒家寶" /></div>
 				</div><!-- /.item-box-01 -->
 			</div><!-- /.section-1 -->
 
 			<div class="section-2 section-box">
-				<h3><img src="../../images/zh-tw/shitsugi/tw-shitsugi-ttl-02.png" alt="Shitsugi, the liquor adding method" /></h3>
+				<h3><img src="../../images/zh-tw/shitsugi/tw-shitsugi-ttl-02.png" alt="什麼是shitsugi" /></h3>
 				<div class="explanation-01">
 					<p>
 						首先準備三個酒甕。<br />
@@ -84,7 +84,7 @@
 						母酒在每年的紀念日等時日子開封一次、取出飲用少許後、從2號酒缸中舀出一部分泡盛補足到1號酒缸、再從3號酒缸中舀出一部分泡盛補足到2號酒缸。最後把另外準備的補足用一升泡盛補足到3號酒缸。
 					</p>
 				</div>
-				<p class="ta-c"><img src="../../images/zh-tw/shitsugi/shitsugi-img-03.jpg" alt="" /></p>
+				<p class="ta-c"><img src="../../images/zh-tw/shitsugi/shitsugi-img-03.jpg" alt="shitsugi是沖繩古酒製造的傳統手法。" /></p>
 				<div class="explanation-02">
 					<p>
 						沖繩的先祖們就是運用了這一獨特的手法來精心培育泡盛古酒、這樣就可以隨時飲用到美味的泡盛佳酒了。<br />
