--- a/lang/en/index.html
+++ b/lang/en/index.html
@@ -32,9 +32,9 @@
 			<h1><a href="http://www.chuko-awamori.com/"><img src="../images/common/logo.jpg" alt="忠孝酒造株式会社" /></a></h1>
 			<ul class="cf">
 				<li><a href="http://www.chuko-awamori.com/">日本語</a></li>
-				<li><a href="_index.php" class="on">English</a></li>
-				<li><a href="../zh-tw/_index.php">繁体中文</a></li>
-				<li><a href="../zh-ch/_index.php">簡体中文</a></li>
+				<li><a href="index.php" class="on">English</a></li>
+				<li><a href="../zh-tw/index.php">繁体中文</a></li>
+				<li><a href="../zh-ch/index.php">簡体中文</a></li>
 			</ul>
 		</div>
 	</div>
