--- a/lang/en/shitsugi/index_sp.html
+++ b/lang/en/shitsugi/index_sp.html
@@ -43,9 +43,9 @@
 			<div class="sp-lang-navi">
 				<ul>
 					<li><a href="http://www.chuko-awamori.com/">日本語</a></li>
-					<li><a href="index_sp.html" class="on">English</a></li>
-					<li><a href="../../zh-tw/_index.php">繁体中文</a></li>
-					<li><a href="../../zh-ch/_index.php">簡体中文</a></li>
+					<li><a href="../index.php" class="on">English</a></li>
+					<li><a href="../../zh-tw/index.php">繁体中文</a></li>
+					<li><a href="../../zh-ch/index.php">簡体中文</a></li>
 				</ul>
 			</div>
 		</div>
