--- a/lang/zh-ch/about/index_sp.html
+++ b/lang/zh-ch/about/index_sp.html
@@ -32,20 +32,20 @@
 			</div>
 			<div id="g_navi">
 				<ul class="cf">
-					<li class="navi_01"><a href="../index.php">Awamori</a></li>
-					<li class="navi_02"><a href="../tour/index.php">Awamori distillery tour</a></li>
-					<li class="navi_03"><a href="../kiln/index.php">Chuko Original Kiln Firing</a></li>
-					<li class="navi_04"><a href="../shitsugi/index.php">Shitsugi, the tradition of Awamori</a></li>
-					<li class="navi_05"><a href="index.php" class="on">About Chuko Distillery</a></li>
+					<li class="navi_01"><a href="../index.php">什么是泡盛</a></li>
+					<li class="navi_02"><a href="../tour/index.php">酒窖参观</a></li>
+					<li class="navi_03"><a href="../kiln/index.php">忠孝南蛮粗烧</a></li>
+					<li class="navi_04"><a href="../shitsugi/index.php">泡盛的传统－shitsugi</a></li>
+					<li class="navi_05"><a href="index.php" class="on">公司概要</a></li>
 					<li><span class="btnClose">&times;&#160;close</span></li>
 				</ul>
 			</div>
 			<div class="sp-lang-navi">
-				<ul>
+				<ul class="cf">
 					<li><a href="http://www.chuko-awamori.com/">日本語</a></li>
-					<li><a href="index_sp.html" class="on">English</a></li>
-					<li><a href="../../zh-tw/tw-index.html">繁体中文</a></li>
-					<li><a href="../../zh-cn/cn-index.html">簡体中文</a></li>
+					<li><a href="../../en/index.php">English</a></li>
+					<li><a href="../../zh-tw/index.php">繁体中文</a></li>
+					<li><a href="index.php" class="on">簡体中文</a></li>
 				</ul>
 			</div>
 		</div>
@@ -57,50 +57,48 @@
 
 		<ul class="breadcrumbs">
 			<li><a href="http://www.chuko-awamori.com/">HOME</a><span class="icon-chevron-thin-right icon"></span></li>
-			<li>About Chuko Distillery</li>
+			<li>公司概要</li>
 		</ul>
 
 		<div class="content-inner">
 
-			<h2>About Chuko Distillery</h2>
+			<h2>公司概要</h2>
 
 			<div class="section-1 section-box">
-				<h3>Greeting</h3>
+				<h3>致尊敬的顾客们</h3>
 				<div class="block-box mb-30">
-					<p class="ta-c mb-20"><img src="../../images/common/about-img-01.jpg" alt="CEO　Tsutomu Oshiro" /></p>
+					<p class="ta-c mb-20"><img src="../../images/common/about-img-01.jpg" alt="总经理　大城 勤" /></p>
 					<p class="mb-30">
-						Our company was originally named Tomigusuku Distillery and founded by Chuko Oshiro in Tomigusuku city located next to Naha city in 1949. Later in 1980,  We reorganized our company and changed our name to Chuko Distillery.<br />
-						With a basic concept  of "Succession and Creation of Awamori Culture", we have worked hard and pursued a new possibility of Awamori. Our mottoes are "Learn, Listen, Create, and Challenge".<br />
-						In 1989, We invented a pottery suitable for Awamori maturation, which is called Chuko Original Kiln Fired Pottery.<br />
-						When we learned that the Southeast Asian Pottery was suitable for Awamori maturation, Sigeru Oshiro, the former president and incumbent chairman, conducted a research and spinned a potter's wheel himself hoping to create a modern Awamori culture for Okinawa.<br />
-						By learning from the culture of our past when we had Ryukyu Kingdom, our goal is to create a new Okinawa value which we can be proud of in this modern society through this Awamori culture.<br />
+						本公司的前身为「丰见城酒造工厂」。于昭和24年（1949年） 在冲绳本岛那霸市的旁边的丰见城市创立、第一代董事长为大城忠孝先生。<br />
+						1980年改名为现在的忠孝酒造。<br />
+						本公司本着"传承和创造泡盛文化"之基本理念、努力探求泡盛酿造新技术的同时、着力于「研究」「倾听」「创新」「挑战」、全体员工同心协力、日益进取酿造优质泡盛名酒。<br />
+						1989年前任公司总经理大城繁先生率先开始对适合泡盛酒熟成的南蛮陶瓮展开了研究、创建了泡盛造酒业第一个自家陶窑、开发制成了用来熟成泡盛的容器（忠孝南蛮粗烧酒瓮）、为开创现代优秀泡盛文化作出了贡献。<br />
 						<br />
-						We have sent our passion and messages of Awamori mostly to the people in Okinawa only until now.<br />
-						We are going to expand our targeted area in and out of Okinawa and spread Awamori culture until you hear and know "Ryukyu Awamori", hoping we can contribute to not only our community but also to the whole Japan, and to the world.<br />
-						Our challenge to the next stage has just begun.
+						我公司的目标是继承琉球王国时代古老卓越的冲绳文化之同时、继往开来发展泡盛文化以创造立足于世界的现代社会新价值观。至今我们致力向冲绳县内 传播对泡盛酒酿造的执著和热情。今后将继续向县内外发送信息、把「琉球泡盛」传递到更多人的手中。<br />
+						为贡献地域社会、让泡盛文化遍及日本全国乃至全世界、我们将开始新的挑战。
 					</p>
 					<p class="ta-r">
-						Chuko Shuzo Corp.<br />
-						CEO　Tsutomu Oshiro
+						忠孝酒造株式会社<br />
+						总经理　大城 勤
 					</p>
 				</div><!-- /.block-box -->
 
 				<dl class="block-box table-02">
-					<dt>Founded</dt>
-					<dd>Founded in 1949</dd>
-					<dt>Head Office</dt>
+					<dt>创立年</dt>
+					<dd>1949年</dd>
+					<dt>总公司</dt>
 					<dd>
 						<p class="mb-10 ta-c">
-							<img src="../../images/common/about-img-02.jpg" alt="Head Office" />
+							<img src="../../images/common/about-img-02.jpg" alt="总公司" />
 						</p>
-						<p>132 Nakachi Tomigusuku City Okinawa 901-0235 Japan<br />TEL：098-850-1257 FAX：098-850-1204</p>
+						<p>邮编901-0235 冲绳县丰见城市字名嘉地132番地<br />TEL：098-850-1257<br />FAX：098-850-1204</p>
 					</dd>
-					<dt>Tokyo Office</dt>
-					<dd>3-6-4 Konan Minato Ku Tokyo 108-0075 Japan<br />TEL：03-5460-3327 FAX：03-5460-3397</dd>
-					<dt>Capital Fund</dt>
-					<dd>41 million Yen</dd>
-					<dt>Employees</dt>
-					<dd>48 people（including regular part-time workers ）</dd>
+					<dt>东京营业所</dt>
+					<dd>邮编108-0075 东京都港区港南3-6-4<br />TEL：03-5460-3327 FAX：03-5460-3397</dd>
+					<dt>资本金</dt>
+					<dd>4,100万日元</dd>
+					<dt>员工数</dt>
+					<dd>48名</dd>
 				</dl>
 
 			</div><!-- /.section-1 -->
@@ -116,11 +114,11 @@
 		</div>
 		<div class="footer-inner">
 			<ul>
-				<li><a href="../index.php"><span class="icon-f-right-icon"></span>Awamori</a></li>
-				<li><a href="../tour/index.php"><span class="icon-f-right-icon"></span>Awamori distillery tour</a></li>
-				<li><a href="../kiln/index.php"><span class="icon-f-right-icon"></span>Chuko Original Kiln Firing</a></li>
-				<li><a href="../shitsugi/index.php"><span class="icon-f-right-icon"></span>Shitsugi, the tradition of Awamori</a></li>
-				<li><a href="index.php"><span class="icon-f-right-icon"></span>About Chuko Distillery</a></li>
+				<li><a href="../index.php"><span class="icon-f-right-icon"></span>什么是泡盛</a></li>
+				<li><a href="../tour/index.php"><span class="icon-f-right-icon"></span>酒窖参观</a></li>
+				<li><a href="../kiln/index.php"><span class="icon-f-right-icon"></span>忠孝南蛮粗烧</a></li>
+				<li><a href="../shitsugi/index.php"><span class="icon-f-right-icon"></span>泡盛的传统－shitsugi</a></li>
+				<li><a href="index.php"><span class="icon-f-right-icon"></span>公司概要</a></li>
 			</ul>
 		</div>
 		<p class="copy">Copyright&copy;Chuko Awamori Distillery Co.,LTD.All&#160;rights&#160;reserved.</p>
