--- a/lang/zh-ch/kiln/index_sp.html
+++ b/lang/zh-ch/kiln/index_sp.html
@@ -32,20 +32,20 @@
 			</div>
 			<div id="g_navi">
 				<ul class="cf">
-					<li class="navi_01"><a href="../index.php">Awamori</a></li>
-					<li class="navi_02"><a href="../tour/index.php">Awamori distillery tour</a></li>
-					<li class="navi_03"><a href="index.php" class="on">Chuko Original Kiln Firing</a></li>
-					<li class="navi_04"><a href="../shitsugi/index.php">Shitsugi, the tradition of Awamori</a></li>
-					<li class="navi_05"><a href="../about/index.php">About Chuko Distillery</a></li>
+					<li class="navi_01"><a href="../index.php">什么是泡盛</a></li>
+					<li class="navi_02"><a href="../tour/index.php">酒窖参观</a></li>
+					<li class="navi_03"><a href="index.php" class="on">忠孝南蛮粗烧</a></li>
+					<li class="navi_04"><a href="../shitsugi/index.php">泡盛的传统－shitsugi</a></li>
+					<li class="navi_05"><a href="../about/index.php">公司概要</a></li>
 					<li><span class="btnClose">&times;&#160;close</span></li>
 				</ul>
 			</div>
 			<div class="sp-lang-navi">
-				<ul>
+				<ul class="cf">
 					<li><a href="http://www.chuko-awamori.com/">日本語</a></li>
-					<li><a href="index_sp.html" class="on">English</a></li>
-					<li><a href="../../zh-tw/tw-index.html">繁体中文</a></li>
-					<li><a href="../../zh-cn/cn-index.html">簡体中文</a></li>
+					<li><a href="../../en/index.php">English</a></li>
+					<li><a href="../../zh-tw/index.php">繁体中文</a></li>
+					<li><a href="index.php" class="on">簡体中文</a></li>
 				</ul>
 			</div>
 		</div>
@@ -57,58 +57,58 @@
 
 		<ul class="breadcrumbs">
 			<li><a href="http://www.chuko-awamori.com/">HOME</a><span class="icon-chevron-thin-right icon"></span></li>
-			<li>Chuko Original Kiln Firing</li>
+			<li>忠孝南蛮粗烧</li>
 		</ul>
 
 		<div class="content-inner">
 
-			<h2>Chuko Original Kiln Firing</h2>
+			<h2>忠孝南蛮粗烧</h2>
 
 			<div class="section-1 section-box">
 				<div class="block-box">
 					<p>
-						Nanban Arayaki, Southeast Asian Kiln Firing, has its origin in 15 to 16 century when Ryuku kingdom flourished by trading with overseas.<br />
-						The feature of this kiln firing is that it doesn't use any glazing to make a pot but uses only fire to make it so dense and firm.This technique was irreplacable for making vessels for Awamori and Kusu.
+						南蛮粗烧起源于南蛮瓮。是15～16世纪琉球王国展开海外大贸易的时代从东南亚传来的。<br />
+						其特点是不使用釉料用高温烧制而成、自古作为泡盛酒的贮藏容器和古酒酿造容器而被使用。
 					</p>
 				</div>
 			</div>
 
 			<div class="section-2 section-box">
-				<h3>History of Chuko Original Kiln Firing</h3>
+				<h3>忠孝南蛮粗烧的诞生</h3>
 				<div class="item-box-01 block-box">
-					<div class="item-img-box"><img src="../../images/common/kiln-img-01.jpg" alt="Manually operated Awamori Distillery" /></div>
+					<div class="item-img-box"><img src="../../images/common/kiln-img-01.jpg" alt="忠孝南蛮粗烧的诞生" /></div>
 					<div class="item-txt-box">
-						<p class="mb-20">
-							Arayaki means firing a pot without using any glazing or coloring.<br />
-							It uses only fire in a kiln to produce dense and firm pottery. The pots made in this method have been considered the best to mature Amamori.<br />
-							Such minerals as iron and etc. contained in the clay melt down and leak out of a pot and facilitate the process of Awamori maturation.
-						</p>
 						<p>
-							We focused on the  effect and started our thorough research on it.<br />
-							We decided on our company policy, "Searching for a better way to produce Awamori and Kusu " as our slogan.<br />
-							Our founder himself had kept spinning a potter's wheel until he found a perfect proportion of mixed soil. We were the first ones to have secceeded in producing pottery among all Awamori distillers in Okinawa.  
+							粗烧指的是不使用釉药上色、保持了土陶本色的高温烧制而成的陶器。自古被认为最适合  用作泡盛酒的熟成。粗烧土陶中含有的铁份等金属成份融入缸里发生催化作用而加速泡盛的熟成。<br />
+							本公司着眼于这一特点、本着「精益求精酿造最佳泡盛酒、最佳古酒」的基本理念、在冲绳县泡盛行业中率先开始了泡盛熟成容器－酒瓮的制造。第一代公司董事长大城繁先生亲自转动陶轮研究制陶、从而开创了业内首个自家陶窑制造的「忠孝南蛮粗烧酒瓮」。
 						</p>
 					</div>
 				</div><!-- /.item-box-01 -->
 			</div><!-- /.section-2 -->
 
 			<div class="section-3 section-box">
-				<h3>Maturation is the distinctiveness of Awamori</h3>
+				<h3>泡盛的生命在于熟成</h3>
 				<div class="item-box-01 block-box">
-					<div class="item-img-box"><img src="../../images/common/kiln-img-02.jpg" alt="Manually operated Awamori Distillery" /></div>
+					<div class="item-img-box"><img src="../../images/common/kiln-img-02.jpg" alt="泡盛的生命在于熟成" /></div>
 					<div class="item-txt-box">
-						<h4>a pottery flake</h4>
-						<p class="mb-20">
-							It is made of a fine tiny particles of clay and fired so firmly that  it has a high density and makes a high  note of a metallic sound.<br />
-							Bizen Yaki, a Famous pottery made in mainland, has the contraction rate of 20 %, while Chuko pottery of 45 %. <br />
+						<h4>酒瓮断片</h4>
+						<p>
+							使用质地细腻的泥土高温烧制、因此密度极高。<br />
+							敲打时发出金属般的声音。
+							日本备前烧陶的收缩率为20%、而忠孝南蛮粗烧酒瓮的收缩率约为45%。<br />
 							<br />
-							Therefore, we proudly recommend to you our pottery which is firm and suitable for your liquor maturation.<br />
+							因此我们充满自信地保证<br />
+							&#9312;绝不漏水　&#9313;是最适合用来熟成的酒瓮。<br />
 							<br />
-							&#8251;Please feel free to pick up the fragment and see the cut section.
+							&#8251;请把断片拿在手里确认一下。
 						</p>
 					</div>
 				</div><!-- /.item-box-01 -->
 			</div><!-- /.section-3 -->
+
+			<div class="section-4 section-box">
+				<p><a href="../../images/zh-ch/kiln/ch-kiln-img-01.jpg"><img src="../../images/zh-ch/kiln/ch-kiln-img-01.jpg" alt="忠孝南蛮粗烧" /></a></p>
+			</div><!-- /.section-4 -->
 
 		</div><!-- /.content-inner -->
 
@@ -121,11 +121,11 @@
 		</div>
 		<div class="footer-inner">
 			<ul>
-				<li><a href="../index.php"><span class="icon-f-right-icon"></span>Awamori</a></li>
-				<li><a href="../tour/index.php"><span class="icon-f-right-icon"></span>Awamori distillery tour</a></li>
-				<li><a href="index.php"><span class="icon-f-right-icon"></span>Chuko Original Kiln Firing</a></li>
-				<li><a href="../shitsugi/index.php"><span class="icon-f-right-icon"></span>Shitsugi, the tradition of Awamori</a></li>
-				<li><a href="../about/index.php"><span class="icon-f-right-icon"></span>About Chuko Distillery</a></li>
+				<li><a href="../index.php"><span class="icon-f-right-icon"></span>什么是泡盛</a></li>
+				<li><a href="../tour/index.php"><span class="icon-f-right-icon"></span>酒窖参观</a></li>
+				<li><a href="index.php"><span class="icon-f-right-icon"></span>忠孝南蛮粗烧</a></li>
+				<li><a href="../shitsugi/index.php"><span class="icon-f-right-icon"></span>泡盛的传统－shitsugi</a></li>
+				<li><a href="../about/index.php"><span class="icon-f-right-icon"></span>公司概要</a></li>
 			</ul>
 		</div>
 		<p class="copy">Copyright&copy;Chuko Awamori Distillery Co.,LTD.All&#160;rights&#160;reserved.</p>
