--- a/lang/zh-tw/about/index.html
+++ b/lang/zh-tw/about/index.html
@@ -32,7 +32,7 @@
 				<li><a href="http://www.chuko-awamori.com/">日本語</a></li>
 				<li><a href="../../en/index.php">English</a></li>
 				<li><a href="../index.php" class="on">繁体中文</a></li>
-				<li><a href="../../zh-cn/index.php">簡体中文</a></li>
+				<li><a href="../../zh-ch/index.php">簡体中文</a></li>
 			</ul>
 		</div>
 	</div>
@@ -43,7 +43,7 @@
 			<li><a href="../index.html" class="navi_01"><span>什麼是泡盛</span></a></li>
 			<li><a href="../tour/index.html" class="navi_02"><span>酒窖參觀</span></a></li>
 			<li><a href="../kiln/index.html" class="navi_03"><span>忠孝南蠻粗燒</span></a></li>
-			<li><a href="../shitsugi/index.html" class="navi_04"><span>泡盛的傳統 － shitsuigi</span></a></li>
+			<li><a href="../shitsugi/index.html" class="navi_04"><span>泡盛的傳統－shitsuigi</span></a></li>
 			<li><a href="index.html" class="navi_05 on"><span>公司概要</span></a></li>
 		</ul>
 	</div>
