--- a/lang/zh-tw/index_sp.html
+++ b/lang/zh-tw/index_sp.html
@@ -32,20 +32,20 @@
 			</div>
 			<div id="g_navi">
 				<ul class="cf">
-					<li class="navi_01"><a href="index.php" class="on">Awamori</a></li>
-					<li class="navi_02"><a href="tour/index.php">Awamori distillery tour</a></li>
-					<li class="navi_03"><a href="kiln/index.php">Chuko Original Kiln Firing</a></li>
-					<li class="navi_04"><a href="shitsugi/index.php">Shitsugi, the tradition of Awamori</a></li>
-					<li class="navi_05"><a href="about/index.php">About Chuko Distillery</a></li>
+					<li class="navi_01"><a href="index.php" class="on">什麼是泡盛</a></li>
+					<li class="navi_02"><a href="tour/index.php">酒窖參觀</a></li>
+					<li class="navi_03"><a href="kiln/index.php">忠孝南蠻粗燒</a></li>
+					<li class="navi_04"><a href="shitsugi/index.php">泡盛的傳統－shitsuigi</a></li>
+					<li class="navi_05"><a href="about/index.php">公司概要</a></li>
 					<li><span class="btnClose">&times;&#160;close</span></li>
 				</ul>
 			</div>
 			<div class="sp-lang-navi">
-				<ul>
+				<ul class="cf">
 					<li><a href="http://www.chuko-awamori.com/">日本語</a></li>
-					<li><a href="index_sp.html" class="on">English</a></li>
-					<li><a href="../zh-tw/tw-index.html">繁体中文</a></li>
-					<li><a href="../zh-cn/cn-index.html">簡体中文</a></li>
+					<li><a href="../en/index.php">English</a></li>
+					<li><a href="index.php" class="on">繁体中文</a></li>
+					<li><a href="../zh-ch/index.php">簡体中文</a></li>
 				</ul>
 			</div>
 		</div>
@@ -57,46 +57,45 @@
 
 		<ul class="breadcrumbs">
 			<li><a href="http://www.chuko-awamori.com/">HOME</a><span class="icon-chevron-thin-right icon"></span></li>
-			<li>Awamori</li>
+			<li>什麼是泡盛</li>
 		</ul>
 
 		<div class="content-inner">
 
-			<h2>Awamori</h2>
+			<h2>什麼是泡盛</h2>
 
 			<div class="section-1 section-box">
-				<h3>Awamori has the history of six hundred years and the oldest distilled liquor in Japan.</h3>
+				<h3>泡盛是擁有600年歷史的日本最古老的蒸餾酒</h3>
 				<div class="block-box">
-					<p class="mb-20 ta-c"><img src="../images/common/awamori-img-01.jpg" alt="Awamori has the history of six hundred years and the oldest distilled liquor in Japan." /></p>
+					<p class="mb-20 ta-c"><img src="../images/common/awamori-img-01.jpg" alt="泡盛是擁有600年歷史的日本最古老的蒸餾酒" /></p>
 					<p>
-						Awamori has been produced in Okinawa and said to be the origin of Japanese Shochu, distilled liquors.<br />
-						Unlike other Shochu from mainland Japan,  Awamori is different in that it has defferent ingredients and a different method. Therefore, It gives its own unique aroma and has a distinctive taste.<br />
-						Another unique feature of Awamori is "the culture of aging Awamori called,  Kusu maturation."  
+						泡盛是產於沖繩的大米燒酒被稱為日本燒酒的元祖。<br />
+						與其他燒酒的原料和釀造法有所不同具有泡盛酒獨特的風味和醇香。「熟成古酒文化」也是泡盛的一大特點。 
 					</p>
 				</div>
 			</div>
 
 			<div class="section-2 section-box">
-				<h3>Conditons to be called Awamori.</h3>
+				<h3>可稱作泡盛的條件</h3>
 				<div class="block-box">
-					<p class="mb-20 ta-c"><img src="../images/common/awamori-img-02.jpg" alt="Conditons to be called Awamori." /></p>
+					<p class="mb-20 ta-c"><img src="../images/common/awamori-img-02.jpg" alt="可稱作泡盛的條件" /></p>
 					<ul>
-						<li>1.Using rice as an ingredient</li>
-						<li>2.Using black malt</li>
-						<li>3.Using fermentation broth of rice malt with yeast and water (whole rice malt fermentation)</li>
-						<li>4.Distilling liquor from rice fermentation broth by a single-distiller machine</li>
-						<li>5.Containing less than 45 % alcohol by volume</li>
+						<li>1.使用大米為原料</li>
+						<li>2.使用黑麴菌</li>
+						<li>3.使用米麴加水和酵母的酒醪釀造 （全麴釀製）</li>
+						<li>4.用單式蒸餾機蒸餾酒醪</li>
+						<li>5.酒精度數在45度以下</li>
 					</ul>
 				</div>
 			</div>
 
 			<div class="section-3 section-box">
-				<h3>Kusu.</h3>
+				<h3>所謂古酒</h3>
 				<div class="block-box">
-					<p class="mb-20 ta-c"><img src="../images/common/awamori-img-03.jpg" alt="Kusu." /></p>
+					<p class="mb-20 ta-c"><img src="../images/common/awamori-img-03.jpg" alt="所謂古酒" /></p>
 					<p>
-						Awamori is called Kusu when it is aged for more than three years after the distillation.<br />
-						This aging is highly unique to Awamori. The older it gets, the richer its aroma and taste become. Of all the distilled liquors in Japan, only Awamori has this culture of maturation.
+						泡盛蒸餾後儲存3年製成的酒稱為古酒（kusu）。<br />
+						這也是泡盛的一大特點，經過長時間貯藏熟成後的古酒酒質上乘，風味更為醇厚。日本國內的蒸餾酒中孕育了這一古酒文化的唯有泡盛。 
 					</p>
 				</div>
 			</div>
@@ -112,11 +111,11 @@
 		</div>
 		<div class="footer-inner">
 			<ul>
-				<li><a href="index.php"><span class="icon-f-right-icon"></span>Awamori</a></li>
-				<li><a href="tour/index.php"><span class="icon-f-right-icon"></span>Awamori distillery tour</a></li>
-				<li><a href="kiln/index.php"><span class="icon-f-right-icon"></span>Chuko Original Kiln Firing</a></li>
-				<li><a href="shitsugi/index.php"><span class="icon-f-right-icon"></span>Shitsugi, the tradition of Awamori</a></li>
-				<li><a href="about/index.php"><span class="icon-f-right-icon"></span>About Chuko Distillery</a></li>
+				<li><a href="index.php"><span class="icon-f-right-icon"></span>什麼是泡盛</a></li>
+				<li><a href="tour/index.php"><span class="icon-f-right-icon"></span>酒窖參觀</a></li>
+				<li><a href="kiln/index.php"><span class="icon-f-right-icon"></span>忠孝南蠻粗燒</a></li>
+				<li><a href="shitsugi/index.php"><span class="icon-f-right-icon"></span>泡盛的傳統－shitsuigi</a></li>
+				<li><a href="about/index.php"><span class="icon-f-right-icon"></span>公司概要</a></li>
 			</ul>
 		</div>
 		<p class="copy">Copyright&copy;Chuko Awamori Distillery Co.,LTD.All&#160;rights&#160;reserved.</p>
