--- a/lang/zh-tw/tour/index.html
+++ b/lang/zh-tw/tour/index.html
@@ -32,7 +32,7 @@
 				<li><a href="http://www.chuko-awamori.com/">日本語</a></li>
 				<li><a href="../../en/index.php">English</a></li>
 				<li><a href="../index.php" class="on">繁体中文</a></li>
-				<li><a href="../../zh-cn/index.php">簡体中文</a></li>
+				<li><a href="../../zh-ch/index.php">簡体中文</a></li>
 			</ul>
 		</div>
 	</div>
@@ -80,7 +80,7 @@
 					10人以上的團隊、有輪椅者或其他需要護理者時、請一定事先預約。
 				</p>
 				<p class="annotation mb-30">&#8251;當天預約請電話確認。</p>
-				<p class="mb-20"> 需要預約者請按下鍵確認。</p>
+				<p class="mb-20">需要預約者請按下鍵確認。</p>
 				<p class="ta-c"><a href=""><img src="../../images/zh-tw/tour/tw-tour-btn-01.jpg" alt="一般のお客様はこちら" /></a></p>
 			</div><!-- /.section-2 -->
 
@@ -139,12 +139,12 @@
 								<tr>
 									<th>參觀時間</th>
 									<td>
-										9:00～17:00 (每隔30分鐘入場）
-										參觀最後受理時間 17:00 
-										(試飲及商店到18:00）
+										AM 9:00～PM 5:00 (每隔30分鐘入場）
+										參觀最後受理時間 PM 5:00 
+										(試飲及商店到PM 6:00）
 										<ul class="annotation mt-30">
 										 	<li>&#8251;如果需要調整參觀時間、請隨時與我們商量。</li>
-										 	<li>&#8251;【忠孝酒窖營業時間】 9:00～18:00 全年無休</li>
+										 	<li>&#8251;【忠孝酒窖營業時間】 AM 9:00～PM 6:00 全年無休</li>
 										 </ul> 
 									</td>
 								</tr>
